<resources>
    <string name="app_name">Pathok</string>

    <!--fb essentials-->
    <string name="facebook_app_id">281819542455161</string>
    <string name="fb_login_protocol_scheme">fb281819542455161</string>

    //for cache
    <string name="user_info_file">USER_INFO_FILE</string>
    <string name="user_info_file_userID">userID</string>
    <string name="user_info_file_name">name</string>
    <string name="user_info_file_email">email</string>
    <string name="user_info_file_profileImage">profileImage</string>


    //auto generated
    <string name="splash_logo">splash_logo</string>
    <string name="pathok_url">pathok.xyz</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="no_internet">No Internet Connection Available!</string>
    <string name="edit_text_hint">আপনি কি ভাবছেন??</string>
    <string name="writing_about">যে বই সম্পর্কে লিখছেন</string>
    <string name="has_written_about">সম্পর্কে লিখেছেন।</string>
    <string name="has_read">পড়েছি</string>
    <string name="is_reading">পড়ছি</string>
    <string name="want_to_read">পড়তে চাই</string>
    <string name="book_image">Book image</string>
    <string name="post_data">এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট এটা পোস্ট</string>
    <string name="people_liked"> জন পোস্টটি পছন্দ করেছে</string>
    <string name="comment_number">টি মন্তব্য</string>
    <string name="user_name">অমুক, তমুক এবং আরও ১৫ জন ইউজার তমুক করেছে।</string>
    <string name="has_done">তমুক করেছে।</string>
    <string name="time">সময়।</string>
    <string name="user_name_profile">আবদুল্লাহ আল বাবুল</string>
    <string name="user_bio">বাংলাদেশের একজন প্রখ্যাত শিক্ষাবিদ, বিজ্ঞান লেখক, বিজ্ঞান কর্মী এবং একজন সরকারি কর্মকর্তা। তবে তিনি আবদুল্লাহ আল-মুতী নামেই সমধিক পরিচিত। বাংলাদেশের বিজ্ঞান লেখকদের মধ্যে তিনিই একমাত্র যিনি ইউনেস্কো কলিঙ্গ পুরস্কার লাভ করেন।</string>
    <string name="has_read_prompt">যে সব বই পড়েছি</string>
    <string name="is_reading_prompt">যে সব বই পড়া হচ্ছে</string>
    <string name="will_be_read">যে সব বই পড়া হবে</string>
    <string name="post_prompt">যে সব পোস্ট করা হয়েছে</string>
    <string name="book_name">বইয়ের নাম</string>
    <string name="author_name">লেখকের নাম</string>
    <string name="about_book">এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল এই বই অনেক ভাল</string>
    <string name="book_rating">গড় রেটিংঃ ৪.৫</string>
    <string name="book_recommendation">এ ধরণের আরও কিছু বই</string>
    <string name="book_reviews">এই বই সম্পর্কিত মন্তব্যসমূহ</string>
    <string name="post">পোস্ট করুন</string>
    <string name="search_book">বই খুঁজুন</string>
</resources>
