<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:background="@color/white"
    android:padding="4dp">

    <RelativeLayout
        android:id="@+id/post_feed_header_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_feed_profile_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_user" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/post_feed_profile_image">

            <TextView
                android:id="@+id/post_feed_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="User name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/post_feed_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_feed_user_name"
                android:clickable="true"
                android:focusable="true"
                android:text="book name "
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_feed_user_name"
                android:layout_toEndOf="@id/post_feed_book_name"
                android:text="@string/has_written_about"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_feed_book_name"
                android:text="time"
                android:textSize="14sp" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/post_feed_book_image_and_options_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_feed_header_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:padding="2dp">

        <ImageView
            android:id="@+id/post_feed_book_image"
            android:layout_width="121.5dp"
            android:layout_height="150dp"
            android:layout_margin="2dp"
            android:contentDescription="@string/book_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_book" />

        <LinearLayout
            android:layout_marginStart="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/post_feed_book_image"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:layout_centerVertical="true">

            <TextView
                android:id="@+id/post_feed_is_reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/is_reading" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/post_feed_has_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/has_read" />

            <TextView
                android:layout_marginTop="8dp"
                android:id="@+id/post_feed_want_to_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:text="@string/want_to_read" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/post_feed_post_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_feed_book_image_and_options_layout"
        android:layout_marginTop="16dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:text="@string/post_data" />

    <RelativeLayout
        android:id="@+id/post_feed_post_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_feed_post_data"
        android:layout_marginTop="8dp"
        android:paddingStart="2dp"
        android:paddingTop="10dp"
        android:paddingEnd="2dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/post_feed_number_of_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="111" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_toEndOf="@id/post_feed_number_of_likes"
            android:text="@string/people_liked" />

        <TextView
            android:id="@+id/post_feed_number_of_comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/comment_prompt"
            android:text="11" />

        <TextView
            android:id="@+id/comment_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="2dp"
            android:text="@string/comment_number" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_feed_post_details_layout"
        android:background="@drawable/up_down_strock"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/post_ic_like" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Like" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="19dp"
                android:src="@drawable/post_ic_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Comment" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/post_ic_share" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="Share" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>